# MU-p1

./: .gitignore  dens.py  diagnostics_global.py  mim_project_2025.py  noise_removal.py  pyproject.toml  reconstruct_geometryA_tomo.py  reconstruct_geometryA_uvwt.py  reconstruct_geometryA_uvwt_legacy.py  reconstruct_line.py  solution.py  testing.py
reconstruction/: geometry.py  global_line.py  integration_utils.py  optimizer.py  residuals.py  uncertainty.py
