[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MU-p1"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "scipy",
    "scikit-image",
    "opencv-python",
    "PyWavelets",
    "matplotlib"
]
